Closes #2125: ingest optimization (#2128)